--- a/app/views/participations/_delete.html.erb
+++ b/app/views/participations/_delete.html.erb
@@ -1,4 +1,5 @@
 <%= link_to "No longer attending?",
             participant_path(gruppetto, participant),
-            data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
+            data: {turbo_method: :delete, turbo_confirm: "Are you sure?"},
+            class: "text-muted"
           %>
