--- a/app/views/gruppettos/show.html.erb
+++ b/app/views/gruppettos/show.html.erb
@@ -1,4 +1,4 @@
-<div class="mt-3"
+<div class="mt-3" style="padding-bottom: 24px"
       data-controller="track-subscription"
       data-track-subscription-track-id-value="<%= @gruppetto.track.id %>">
 
@@ -9,11 +9,12 @@
       <%= image_tag "track-fallback.svg", height: 400, width: 400, class: 'w-100', id: 'image' %>
     <% end %>
   </div>
-  <div class="m-2 px-3 py-2 bg-light p-1 rounded">
+
+  <div class="m-2 p-4 bg-light rounded">
     <div class='d-flex justify-content-between'>
       <div class='w-100'>
-          <h3 class="mb-0 overflow-hidden fw-bold" style='color:#37caa8;'><%= @gruppetto.name %></h3>
-          <p class="text-muted mb-0 pt-2">on <%= @gruppetto.start.strftime('%d.%m.%Y  - %l%P') unless @gruppetto.start.nil? %></p>
+          <h3 class="mb-1 overflow-hidden" style='color:#37caa8;'><%= @gruppetto.name %></h3>
+          <h5 class="mb- pt-2"><%= @gruppetto.start.strftime('%d.%m.%Y  - %l%P') unless @gruppetto.start.nil? %></h5>
           <p class="text-muted">starting at <%= @gruppetto.track.address unless @gruppetto.track.address.nil? %></p>
       </div>
       <div>
@@ -22,90 +23,90 @@
             <div class='d-flex align-items-baseline'><i class="fa-solid fa-download me-2"></i>GPX</div>
           <% end %>
         <% end %>
-        </div>
+      </div>
     </div>
     <div>
       <div>
-         <p> <%= @gruppetto.description %></p>
+         <p class="text-muted"> <%= @gruppetto.description %></p>
       </div>
-        <div class="d-flex justify-content-start">
-          <div class="d-flex align-items-baseline py-1"  style="width: 100px;">
-            <i class="fa-solid fa-gauge" style="margin-left:2px;"></i>
-            <p class="ms-2 mb-0 flex-grow-1 text-end overflow-hidden"><%= @gruppetto.avg_speed.nil? ? " - " : @gruppetto.avg_speed %> km/h</p>
-          </div>
-          <div class="d-flex align-items-baseline py-1"  style="width: 100px;margin-left:42px;">
-            <i class="fa-solid fa-route"></i>
-            <p class="ms-2 mb-0 flex-grow-1 text-end overflow-hidden" data-track-subscription-target="totalKm"><%= @gruppetto.track.total_km.nil? ? " - " : @gruppetto.track.total_km %> km</p>
-          </div>
+      <div class="d-flex justify-content-start w-100">
+        <div class="d-flex align-items-baseline pb-2" style="width: 150px;">
+          <p class="ms-2 mb-0 flex-grow-1 text-end overflow-hidden" style="margin-right:20px;"><%= @gruppetto.avg_speed.nil? ? " - " : @gruppetto.avg_speed %> km/h</p>
+          <i class="fa-solid fa-gauge"></i>
         </div>
-        <div class="d-flex justify-content-start">
-          <div class="d-flex align-items-baseline py-1"  style="width: 100px;">
-            <i class="fa-solid fa-dumbbell"></i>
-            <p class="ms-2 mb-0 flex-grow-1 text-end overflow-hidden"><%= @gruppetto.difficulty.nil? ? " - " : @gruppetto.difficulty %> </p>
-          </div>
-          <div class="d-flex align-items-baseline" style="width: 100px;margin-left:42px;">
-            <i class="fa-solid fa-mountain"></i>
-            <p class="ms-2 mb-0 flex-grow-1 text-end overflow-hidden" data-track-subscription-target="totalVm"><%= @gruppetto.track.total_vm.nil? ? " - " : @gruppetto.track.total_vm %> vm</p>
-          </div>
+        <div class="d-flex align-items-baseline pb-2"  style="width: 150px;margin-left:42px;">
+          <p class="ms-2 mb-0 flex-grow-1 text-end overflow-hidden" style="margin-right:20px;" data-track-subscription-target="totalKm"><%= @gruppetto.track.total_km.nil? ? " - " : @gruppetto.track.total_km %> km</p>
+          <i class="fa-solid fa-route"></i>
         </div>
-
-
+      </div>
+      <div class="d-flex justify-content-start w-100">
+        <div class="d-flex align-items-baseline pt-2" style="width: 150px;">
+          <p class="ms-2 mb-0 flex-grow-1 text-end overflow-hidden" style="margin-right:20px;"><%= @gruppetto.difficulty.nil? ? " - " : @gruppetto.difficulty %> </p>
+          <i class="fa-solid fa-dumbbell"></i>
+        </div>
+        <div class="d-flex align-items-baseline pt-2" style="width: 150px;margin-left:42px;">
+          <p class="ms-2 mb-0 flex-grow-1 text-end overflow-hidden" style="margin-right:20px;" data-track-subscription-target="totalVm"><%= @gruppetto.track.total_vm.nil? ? " - " : @gruppetto.track.total_vm %> vm</p>
+          <i class="fa-solid fa-mountain"></i>
+        </div>
+      </div>
     </div>
   </div>
 
-    <div class="m-2 px-3 py-2 bg-light p-1 rounded">
-      <h4 class="mb-0 overflow-hidden" style='color:#37caa8;'>Gruppetto overview</h4>
-        <table class='table table-borderless mb-0'>
-          <tbody >
-            <tr class='border-bottom'>
-              <td class='px-0 pb-3'>
-                <div class="">
-                  <p class=""><%= @gruppetto.user.first_name %> is hosting</p>
-                  <% if @gruppetto.user.avatar.key.nil? %>
-                    <%= image_tag "avatar-fallback.svg", height: 25, width: 25, class: 'rounded-circle shadow-sm' %>
-                  <% else %>
-                    <%= cl_image_tag @gruppetto.user.avatar.key, height: 25, width: 25, crop: :fill, class: 'rounded-circle shadow-sm' %>
-                  <% end %>
+  <div class="m-2 p-4 bg-light rounded" >
+    <h4 class="mb-0 overflow-hidden" style='color:#37caa8;'>Gruppetto overview</h4>
+    <table class='table table-borderless mb-0'>
+      <tbody >
+        <tr>
+          <td class='px-0 pb-3'>
+            <div class="">
+              <p class=""><%= @gruppetto.user.first_name %> is hosting</p>
+              <% if @gruppetto.user.avatar.key.nil? %>
+                <%= image_tag "avatar-fallback.svg", height: 50, width: 50, class: 'rounded-circle shadow-sm' %>
+              <% else %>
+                <%= cl_image_tag @gruppetto.user.avatar.key, height: 50, width: 50, crop: :fill, class: 'rounded-circle shadow-sm' %>
+              <% end %>
+            </div>
+          </td>
+          <td class='px-0 pb-3'>
+            <%= render "show_going", grupppetto: @gruppetto %>
+          </td>
+        </tr>
+        <tr>
+          <td class='px-0'><p class=" mb-0">What about you?</p></td>
+        </tr>
+        <tr class='my-0'>
+          <td class='px-0 pb-2'>
+            <%= render "participations/new", gruppetto: @gruppetto, participant: @participant %>
+            <% if @gruppetto.participants.include? current_user %>
+              <% @participant = @gruppetto.participations.find { |participant| participant.user_id == current_user.id} %>
+              <%= render "participations/status",  participation_status: @participant.participation_status  %>
+              <% if (@participant.participation_status == "Attending") &&
+                    (@gruppetto.user != current_user) %>
+                <div class='mt-2'>
+                  <%= render "participations/delete", { gruppetto: @gruppetto, participant: @participant } %>
                 </div>
-              </td>
-              <td class='px-0 pb-3'>
-                <%= render "show_going", grupppetto: @gruppetto %>
-              </td>
-            </tr>
-            <tr>
-              <td class='px-0'><p class=" mb-0">What about you?</p></td>
-            </tr>
-            <tr class='my-0'>
-              <td class='px-0 pb-3'>
-                <%= render "participations/new", gruppetto: @gruppetto, participant: @participant %>
-                <% if @gruppetto.participants.include? current_user %>
-                  <% @participant = @gruppetto.participations.find { |participant| participant.user_id == current_user.id} %>
-                    <%= render "participations/status",  participation_status: @participant.participation_status  %>
-                    <% if (@participant.participation_status == "Attending") &&
-                          (@gruppetto.user != current_user) %>
-                      <div class='mt-3'>
-                        <%= render "participations/delete", { gruppetto: @gruppetto, participant: @participant } %>
-                      </div>
-                    <% end %>
-                  <% end %>
-              </td>
-            </tr>
-          </tbody>
-        </table>
+              <% end %>
+            <% end %>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <% if @gruppetto.participants.include? current_user %>
+      <% if @gruppetto.participations.find { |participant| participant.user_id == current_user.id}.participation_status == "Attending" %>
+        <div class="py-2">
+          <p>Group Chat</p>
+          <%= link_to "Chat with the gruppetto", gruppetto_chatroom_path(@gruppetto), class: 'btn btn-primary w-100' %>
+        </div>
+      <% end %>
+    <% end %>
+  </div>
 
-      </div>
-    <div class="m-2 px-1 py-2">
-        <%# <h4 class="mb-3 overflow-hidden" style='color:#37caa8;'>Chat with the gruppetto</h4> %>
-        <%= link_to "Chat with the gruppetto", gruppetto_chatroom_path(@gruppetto), class: 'btn btn-primary w-100' %>
-      </div>
-    </div>
   <% if current_user == @gruppetto.user %>
-
-    <div class="m-2 px-3 py-2 bg-light p-1 rounded">
-        <h4 class="mb-0 overflow-hidden" style='color:#37caa8;'>Manage your participants</h4>
+    <div class="m-2 p-3 bg-light p-1 rounded" style='padding-bottom:56px; margin-bottom:56px;'>
+        <h4 class="" style='color:#37caa8;'>Manage your participants</h4>
         <% if @gruppetto.participants.count > 1 %>
-          <div class="py-2">
-            <div class="table table-hover table-responsive-sm justify-content-between">
+          <div class="pt-2 ">
+            <div class="table table-borderless table-hover justify-content-between">
               <div class="row border-bottom">
                 <h5 class="col text-center">Status</h5>
                 <h5 class="col text-center">Name</h5>
@@ -121,9 +122,8 @@
             </div>
           </div>
         <% else %>
-          <p>No attendees yet 😢</p>
+          <p class="mb-0">No attendees yet 😢</p>
         <% end %>
-      <% end %>
     </div>
-    </div>
-  </div>
+  <% end %>
+</div>
