Added possibility to logout

--- a/app/views/gruppettos/_index_card.html.erb
+++ b/app/views/gruppettos/_index_card.html.erb
@@ -1,7 +1,7 @@
 <tr>
-  <td>
+  <td class="pb-0">
   <%= link_to gruppetto_path(gruppetto), class: 'text-decoration-none' do  %>
-    <div class="my-2 bg-light p-3 rounded shadow">
+    <div class="bg-light p-3 rounded shadow">
     <div class="d-flex justify-content-between">
         <div class=''>
           <h5 class="mb-2 me-2 overflow-hidden fw-bold"><%= gruppetto.name %></h5>
