--- a/app/views/shared/_footer_nav.html.erb
+++ b/app/views/shared/_footer_nav.html.erb
@@ -1,7 +1,6 @@
-<div class="d-flex justify-content-between w-100 bg-dark p-2 align-self-stretch"  style="position:fixed; bottom:0;z-index:10000;">
+<div class="d-flex justify-content-between w-100 bg-dark px-2 align-self-stretch"  style="position:fixed; bottom:0;z-index:10000;padding-bottom:18px;padding-top:18px">
     <div class='flex-grow-1'>
       <%= link_to gruppettos_path do %>
-
         <h2 class='m-0 text-center mt-2'><i class="fa-solid fa-house <%= ((request.url.include? "gruppettos") && (!request.url.include? "going") && (!request.url.include? "new")) ? 'text-primary' : '' %>" style='color:white'></i></h2>
       <% end %>
     </div>
