--- a/app/views/gruppettos/_search.html.erb
+++ b/app/views/gruppettos/_search.html.erb
@@ -40,7 +40,7 @@
           <%= form.date_field :end_date%>
         <hr>
 
-          <%= form.submit "Search", class: "btn btn-primary" %>
+          <%= form.submit "Filter", class: "btn btn-primary" %>
           <% end %>
       </div>
       <div class="modal-footer">
