--- a/app/views/gruppettos/index.html.erb
+++ b/app/views/gruppettos/index.html.erb
@@ -14,7 +14,7 @@
               class="btn btn-primary"
               data-bs-toggle="modal"
               data-bs-target="#exampleModalScrollable">
-        Search gruppettos
+        Filter
       </button>
 
       <% if params[:commit] %>
