--- a/app/assets/stylesheets/components/_chatroom.scss
+++ b/app/assets/stylesheets/components/_chatroom.scss
@@ -6,6 +6,7 @@
   flex-direction: column;
   justify-content: space-between;
   flex-grow: 1;
+  margin-bottom: 56px;
 
   h1 {
     border-bottom: 1px solid $gray-200;
