--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -10,7 +10,7 @@
     <% end %>
   </div>
 
-  <div class="pb-5 bg-white fixed-bottom">
+  <div class="bg-white fixed-bottom" style='padding-bottom:68px'>
   <%= render 'messages/form', chatroom: @chatroom, message: @message %>
   </div>
   <%# <%= link_to "Back to Gruppetto", gruppetto_path(@chatroom.gruppetto), class: "btn btn-primary" %>
