--- a/app/views/gruppettos/_show_going.html.erb
+++ b/app/views/gruppettos/_show_going.html.erb
@@ -1,7 +1,7 @@
 <%# <%= turbo_frame_tag dom_id(participant) do %>
   <div class="flex-grow-1 text-end pe-3 participants-going" id="participants-going">
     <p class="">
-      <%= attending_count = @gruppetto.participations.count {|attending| attending.participation_status == "Attending" } %>
+      <%= attending_count = @gruppetto.participations.filter{|attending| attending.participation_status == "Attending"  && attending.user != current_user} %>
       <% if attending_count > 1 %>
         are
       <% else %>
@@ -9,22 +9,22 @@
       <% end %>
       joining
     </p>
-    <% first_five = @gruppetto.participations.filter{|attending| attending.participation_status == "Attending" } %>
+    <% first_five = @gruppetto.participations.filter{|attending| attending.participation_status == "Attending"  && attending.user != current_user} %>
     <% if first_five.count > 5 %>
       <% first_five[0...5].each do |part| %>
         <% if part.user.avatar.key.nil? %>
-          <%= image_tag "avatar-fallback.svg", height: 50, width: 50, class: 'rounded-circle shadow-sm', style: 'margin-inline-start: -30px;' %>
+          <%= image_tag "avatar-fallback.svg", height: 45, width: 45, class: 'rounded-circle shadow-sm', style: 'margin-inline-start: -30px;' %>
         <% else %>
-          <%= cl_image_tag part.user.avatar.key, height: 50, width: 50, crop: :fill, class: 'rounded-circle shadow-sm', style: 'margin-inline-start: -30px;' %>
+          <%= cl_image_tag part.user.avatar.key, height: 45, width: 45, crop: :fill, class: 'rounded-circle shadow-sm', style: 'margin-inline-start: -30px;' %>
         <% end %>
       <% end %>
       + <%= first_five.count - 5 %>
     <% else %>
       <% first_five.each do |part| %>
         <% if part.user.avatar.key.nil? %>
-          <%= image_tag "avatar-fallback.svg", height: 50, width: 50, class: 'rounded-circle shadow-sm', style: 'margin-inline-start: -30px;' %>
+          <%= image_tag "avatar-fallback.svg", height: 45, width: 45, class: 'rounded-circle shadow-sm', style: 'margin-inline-start: -30px;' %>
         <% else %>
-          <%= cl_image_tag part.user.avatar.key, height: 50, width: 50, crop: :fill, class: 'rounded-circle shadow-sm', style: 'margin-inline-start: -30px;' %>
+          <%= cl_image_tag part.user.avatar.key, height: 45, width: 45, crop: :fill, class: 'rounded-circle shadow-sm', style: 'margin-inline-start: -30px;' %>
         <% end %>
       <% end %>
     <% end %>
