--- a/app/views/tracks/_fields.html.erb
+++ b/app/views/tracks/_fields.html.erb
@@ -1,6 +1,8 @@
 <div class="<%= hidden ? 'd-none' : '' %>" data-gruppetto-form-hide-target="trackForm" id="dependentFields">
       <%= f.simple_fields_for(track) do |tracks_form| %>
-          <%= tracks_form.input :name, input_html: { class: 'bg-light', data: {action: 'change->gruppetto-validator#validateField'}  }%>
+          <%= tracks_form.input :name,
+                                label: 'Name of the track',
+                                input_html: { class: 'bg-light', data: {action: 'change->gruppetto-validator#validateField'}  }%>
           <hr>
           <p>You have the possibility to upload a file containing GPS-coordinates. Do you want to upload a file?</p>
               <div class="form-check form-check-inline mb-3">
